# competetive-programming

./: CMakeLists.txt
aoi/: Binomialkoeffizient  Binomialkoeffizient.cpp
ccc/CCC2025/: out.txt
ccc/MagicNumbers/: level1.py  level3.py  test.py
ccc/Matchmaking/: level1.py  level2.py  level3.py  level4.py  level5.py  output.txt  test.py
ccc/Parkgarage/: blueprint.py  level1.py  level2.py  level3.py  level3_kein_chat.py  level4.py  level5.py
ccc/RockPaperScissors/: input.txt  level_1.py  output.txt  part_2.py  part_3.py  test.py
ccc/RoomPlanner/: level1.py  level2.py  level3.py  out  (+4 more)
cses/: CMakeLists.txt  binary_search_1  binary_search_1.cpp  subarray_sum.cpp  test
cses/dp/: coin_combinations_1  coin_combinations_1.cpp  coin_combinations_2  coin_combinations_2.cpp  dice_combinations  dice_combinations.cpp  grid_path_1  grid_path_1.cpp  minimizing_coins  minimizing_coins.cpp  removing_digits  removing_digits.cpp
cses/intro/: apple_division  apple_division.cpp  increasing_array  increasing_array.cpp  missing_number.cpp  number_spiral.cpp  permutations  permutations.cpp  repetitions  repetitions.cpp  weird_algorithm.cpp
cses/range_queries/: forest_queries  forest_queries.cpp  static_range_minimum_queries  static_range_minimum_queries.cpp
cses/sliding_window/: sliding_window_sum  sliding_window_sum.cpp
cses/sorting_and_searching/: distinct_numbers  distinct_numbers.cpp  nearest_smaller_values  nearest_smaller_values.cpp  subarray_sum  subarray_sum.cpp  subarray_sum_2  subarray_sum_2.cpp  sum_of_three_values  sum_of_three_values.cpp  sum_of_two_values.cpp
(+163 files in other folders)
